force-app/main/default/objects/PDRI__Work_Item_Tracking__c/PDRI__Work_Item_Tracking__c.object-meta.xml
<CustomObject>
    <label>Work Item Tracking</label>
    <nameField>
        <displayFormat>WIT-{000000}</displayFormat>
        <label>Work Item Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Item Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>