force-app/main/default/objects/PDRI__Work_Item_Tracking__c/fields/PDRI__Deployment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Bundle</label>
    <referenceTo>PDRI__Deployment_Bundle__c</referenceTo>
    <relationshipLabel>Work Item Trackings</relationshipLabel>
    <relationshipName>Work_Item_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>