force-app/main/default/objects/PDRI__Work_Item_Tracking__c/fields/PDRI__Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Issue_Type__c</fullName>
    <label>Issue Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>